Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -28,6 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip3 upgrade pip\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.metrics import accuracy_score, roc_curve, auc\n",
