Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -24,11 +24,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR: unknown command \"upgrade\"\r\n"
+     ]
+    }
+   ],
    "source": [
-    "!pip3 upgrade pip\n",
+    "!pip install pip\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.metrics import accuracy_score, roc_curve, auc\n",
