--- a/index.ipynb
+++ b/index.ipynb
@@ -24,14 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ERROR: unknown command \"upgrade\"\r\n"
+      "Requirement already satisfied: pip in /opt/conda/envs/learn-env/lib/python3.6/site-packages (19.2.3)\r\n"
      ]
     }
    ],
