--- a/index.ipynb
+++ b/index.ipynb
@@ -24,19 +24,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pip in /opt/conda/envs/learn-env/lib/python3.6/site-packages (19.2.3)\r\n"
+      "Collecting pip3\n",
+      "\u001b[31m  ERROR: Could not find a version that satisfies the requirement pip3 (from versions: none)\u001b[0m\n",
+      "\u001b[31mERROR: No matching distribution found for pip3\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "!pip install pip\n",
+    "!pip install pip3\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.metrics import accuracy_score, roc_curve, auc\n",
