Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -24,21 +24,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting pip3\n",
-      "\u001b[31m  ERROR: Could not find a version that satisfies the requirement pip3 (from versions: none)\u001b[0m\n",
-      "\u001b[31mERROR: No matching distribution found for pip3\u001b[0m\n"
+      "/bin/sh: 1: nano: not found\r\n"
      ]
     }
    ],
    "source": [
-    "!pip install pip3\n",
+    "!nano\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.metrics import accuracy_score, roc_curve, auc\n",
